# kotuku

./: .gitignore  AGENTS.md  CMakeLists.txt  readme.md
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  static.yml
apps/: CMakeLists.txt  find.tiri  httpserver.tiri  paintbox.tiri  proxy_server.tiri  tuku.tiri  vuepoint.tiri
apps/tests/: test_find.tiri  test_proximity.tiri  test_tuku.tiri  test_tuku_server.tiri
docs/: wiki-header.html
docs/plans/: mesh_gradients.md
examples/: benchmark_particles.tiri  gamepad.tiri  gradients.tiri  image_filtering.tiri  wave.tiri  widgets.tiri
examples/io/: read_stdout.tiri
include/kotuku/: field_values.hpp  log.h  main.h  objects.h  strings.hpp  vector.hpp
scripts/: benchmark.tiri  config.tiri  datetime.tiri  git.tiri  gui.tiri  json.tiri  options.tiri  tempus.tiri  vfx.tiri
scripts/gui/: colourdialog.tiri  columnview.tiri  combobox.tiri  dialog.tiri  divider.tiri  dropdown.tiri  filedialog.tiri  fileview.tiri  fontdialog.tiri  input.tiri  libview.tiri  listview.tiri  menu.tiri  menubar.tiri  scrollbar.tiri  slider.tiri  toolbar.tiri  tooltip.tiri  window.tiri
scripts/io/: filemgr.tiri
scripts/net/: httpserver.tiri  proxyserver.tiri  url.tiri
src/: config.h.in
src/audio/: CMakeLists.txt  alsa.cpp  audio.cpp  audio.h  audio.tdl  audio_def.c  class_audio.cpp  class_audio_def.c  class_sound.cpp  class_sound_def.c  commands.cpp  dsound.cpp  functions.cpp  windows.h
src/backstage/: CMakeLists.txt  backstage.cpp  http.cpp  interface.tiri  router.cpp  routes.cpp  server.cpp  websocket.cpp
src/backstage/routes/: agents.cpp  classes.cpp  diagnostics.cpp  docs.cpp  errors.cpp  jobs.cpp  logs.cpp  modules.cpp  objects.cpp  ping.cpp  scripts.cpp  subscriptions.cpp
src/backstage/tests/: test_backstage.tiri
src/core/: CMakeLists.txt  core.cpp  core_close.cpp  data.cpp  data_actionlist.cpp  data_errors.cpp  data_functions.c  defs.h  fs_folders.cpp  fs_identify.cpp  fs_resolution.cpp  fs_volumes.cpp  fs_watch_path.cpp  idl.h  internal.cpp  lib_events.cpp  lib_fields_read.cpp  lib_fields_write.cpp  lib_filesystem.cpp  lib_functions.cpp  lib_locking.cpp  lib_log.cpp  lib_memory.cpp  lib_messages.cpp  lib_objects.cpp  node_pool.h  prototypes.h  static_modules.cpp
src/display/: CMakeLists.txt  _display.cpp  class_bitmap.cpp  class_bitmap_def.c  class_clipboard.cpp  class_clipboard_def.c  class_controller.cpp  class_controller_def.c  class_display.cpp  class_display_def.c  class_pointer.cpp  class_pointer_def.c  defs.h  display-driver.cpp  display.cpp  display.tdl  idl.h  lib_bitmap.cpp  lib_cursor.cpp  lib_display.cpp  lib_input.cpp  lib_surfaces.cpp  module_def.c  prototypes.h
src/document/: CMakeLists.txt  debug.cpp  document.cpp  draw.cpp  dunit.cpp  entities.cpp  functions.cpp  layout.cpp  menu.cpp  parsing.cpp  parsing_xquery.cpp  scrollbar.cpp  streamchar.cpp  ui.cpp
src/font/: class_font.cpp  class_font_def.c  font.cpp  font.tdl  font_bitmap.cpp  font_def.c
src/http/: http.cpp  http.tdl  http_def.c  http_fields.cpp  http_functions.cpp  http_incoming.cpp
src/image/: CMakeLists.txt  image.cpp  image.h  image.tdl  image_def.c
src/image_jpeg/: jpeg.cpp
src/json/: json.cpp  test_json.tiri
src/launcher/: exec.cpp  origo.cpp
src/link/: base64.cpp  base64.h  common-win.cpp  init-unix.cpp  init-win.cpp  linear_rgb.h  resource.rc.in  simd.h  unicode.cpp  unicode.h
src/lzma/: CMakeLists.txt  lzma.cpp  lzma.tdl  lzma_def.cpp  lzma_stream.h
src/lzma/lzmasdk/: Precomp.h  README.md
src/lzma/tests/: sample.lzma  test_lzma.tiri
src/mp3/: CMakeLists.txt  mp3.cpp  mp3.tdl  mp3_def.cpp
src/network/: CMakeLists.txt  class_netlookup.cpp  class_netlookup_def.c  class_netserver.cpp  class_proxy.cpp  class_proxy_def.c  generate_ssl_certificates.cmake  module_def.c  net_iocp.cpp  net_linux.cpp  net_platform.h  netserver_def.c  network.cpp  network.tdl  openssl.cpp
src/network/clientsocket/: clientsocket.cpp  clientsocket_def.c
src/network/netclient/: netclient.cpp  netclient_def.c
src/network/netsocket/: netsocket.cpp  netsocket_def.c  netsocket_fields.cpp  netsocket_functions.cpp
src/network/tests/: test_client_server.tiri  test_concurrency.tiri  test_dns_parallel.tiri  test_error_handling.tiri  test_iocp_pipeline.tiri  test_ipv6.tiri  test_ssl.tiri  test_udp_basic.tiri  test_udp_broadcast_multicast.tiri  test_udp_ipv6.tiri  test_udp_performance.tiri  test_udp_tcp_coexistence.tiri
src/network/win32/: iocp.cpp  iocp.h  ssl_certs.cpp  ssl_wrapper.cpp  win32_ssl.cpp
src/origo/: CMakeLists.txt  exec.cpp  origo.cpp
src/picture/: picture.cpp
src/picture_jpeg/: CMakeLists.txt
src/regex/: CMakeLists.txt  regex.cpp  regex.tdl  regex_def.c
src/scintilla/: class_scintilla.cxx  class_scintilla_def.cxx  class_scintilla_ext.cxx  class_scintilla_search.cxx  module_def.c  pan_menu.cxx  pan_surface.cxx  pan_window.cxx  scintilla.tdl  scintillakotuku.h
src/svg/: CMakeLists.txt  anim.h  anim_metrics.cpp  anim_motion.cpp  anim_parsing.cpp  anim_timing.cpp  anim_value.cpp  class_rsvg.cpp  class_svg.cpp  class_svg_def.c  gradients.cpp  parser.cpp  save_svg.cpp  svg.cpp  svg.tdl  utility.cpp
src/tiri/: CMakeLists.txt  defs.h  hashes.h  module_def.cpp  struct_def.h  tiri.cpp  tiri.tdl  tiri_async.cpp  tiri_class.cpp  tiri_class_def.cpp  tiri_class_methods.cpp  tiri_functions.cpp  tiri_input.cpp  tiri_io.cpp  tiri_module.cpp  tiri_objects_calls.cpp  tiri_objects_indexes.cpp  tiri_processing.cpp  tiri_regex.cpp  tiri_struct.cpp
src/vector/: CMakeLists.txt  colourmaps.cpp  colours.cpp  font.h  idl.h  module_def.c  paths.cpp  pixfmt.h  utility.cpp  vector.cpp  vector.h  vector.tdl  vector_functions.cpp  vector_readpainter.cpp
src/xml/: CMakeLists.txt  constants.tdl  unescape.cpp  xml.cpp  xml.h  xml.tdl  xml_class.cpp  xml_class_def.c  xml_def.c  xml_functions.cpp
src/xquery/: AGENTS.md  CMakeLists.txt  unit_tests.cpp  xquery.cpp  xquery.h  xquery.tdl  xquery_class.cpp  xquery_class_def.cpp
tools/: docgen.tiri  docgen_ai.tiri  docgen_wiki.tiri  flute.tiri  rsakey.tiri  svg_mark.tiri
(+880 files in other folders)
